@@ -16,31 +16,64 @@ import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-@Service
 @AllArgsConstructor
+@Service
 public class UserService {
 
-    private final ModelMapper mapper;
     private final UserRepository repo;
+    private final ModelMapper mapper;
+
+    public UserEntity searchByEmail(String email) {
+        return repo.findByEmail(email);
+    }
 
     public List<UserDto> findAllUsers() {
         var userEntityList = new ArrayList<>(repo.findAll());
 
-        return userEntityList.stream()
+        return userEntityList
+                .stream()
                 .map(this::convertToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public UserDto findUserById(final UUID id) {
-        var user = repo.findById(id).orElseThrow(
-                () -> new NotFoundException("User by id" + id + " was not found")
-        );
+        var user = repo
+                .findById(id)
+                .orElseThrow(
+                        () -> new NotFoundException("User by id " + id + " was not found")
+                );
 
         return convertToDto(user);
     }
 
-    public void updateUser(UUID id, UserDto userDto, String password) throws NoSuchAlgorithmException {
+    public UserDto createUser(UserDto userDto, String password)
+            throws NoSuchAlgorithmException {
+        var user = convertToEntity(userDto);
+
+        if (password.isBlank()) throw new IllegalArgumentException(
+                "Password is required"
+        );
+
+        var existsEmail = repo.selectExistsEmail(user.getEmail());
+        if (existsEmail) throw new BadRequestException(
+                "Email " + user.getEmail() + " taken"
+        );
+
+        byte[] salt = createSalt();
+        byte[] hashedPassword = createPasswordHash(password, salt);
+
+        user.setStoredSalt(salt);
+        user.setStoredHash(hashedPassword);
+
+        repo.save(user);
+
+        return convertToDto(user);
+    }
+
+    public void updateUser(UUID id, UserDto userDto, String password)
+            throws NoSuchAlgorithmException {
         var user = findOrThrow(id);
         var userParam = convertToEntity(userDto);
 
@@ -63,26 +96,6 @@ public class UserService {
         repo.deleteById(id);
     }
 
-    public UserDto createUser(UserDto userDto, String password) throws NoSuchAlgorithmException {
-        var user = convertToEntity(userDto);
-
-        if (password.isBlank()) throw new IllegalArgumentException("Password is required");
-
-        var existsEmail = repo.selectExistsEmail(user.getEmail());
-
-        if (existsEmail) throw new BadRequestException("Email" + user.getEmail() + " taken");
-
-        byte[] salt = createSalt();
-        byte[] hashedPassword = createPasswordHash(password, salt);
-
-        user.setStoredSalt(salt);
-        user.setStoredHash(hashedPassword);
-
-        repo.save(user);
-
-        return convertToDto(user);
-    }
-
     private byte[] createSalt() {
         var random = new SecureRandom();
         var salt = new byte[128];
@@ -91,7 +104,8 @@ public class UserService {
         return salt;
     }
 
-    private byte[] createPasswordHash(String password, byte[] salt) throws NoSuchAlgorithmException {
+    private byte[] createPasswordHash(String password, byte[] salt)
+            throws NoSuchAlgorithmException {
         var md = MessageDigest.getInstance("SHA-512");
         md.update(salt);
 
